package ifsc.edu.br.airplane_manager.domain.airplane;

public enum AirplaneType {
    JET,
    AIRLINER,
    CARGO,
    TRANSPORT,
    UNKNOWN
}
